--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://melodious-bubblegum-0ccf83.netlify.app/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 
